--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -27,4 +27,14 @@
   {% endfor %}
 </div>
 
+<!-- HTML -->
+<div class="review-section mt-5">
+  <h2>Reseñas de Clientes</h2>
+  <div class="review">
+    <p>{{ reseñas.reseña }}</p>
+  </div>
+</div>
+
+
+
 {% endblock %}
