--- a/store/templates/store/login.html
+++ b/store/templates/store/login.html
@@ -7,7 +7,7 @@
 
 <div class="container d-flex justify-content-center align-items-center login-container">
     <div class="card p-4 login-card w-100">
-      <h2 class="text-center mb-4">Iniciar Sesión</h2>
+      <h2 class="text-center mb-4">{{bienvenido}}</h2>
       <form method="POST" action="#">
         {% csrf_token %}
       
