Agregando sobre nosotros

--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -3,6 +3,11 @@
 
 {% block content %}
 <link rel="stylesheet" href="{% static 'css/main.css' %}">
+<div class="container text-center mt-2">
+  <h1>Bienvenido a E-TIENDA</h1>
+  <p>En E-TIENDA, ofrecemos una amplia selección de productos únicos y de alta calidad. Desde tecnología moderna hasta accesorios para tu día a día, estamos comprometidos a brindarte la mejor experiencia de compra.</p>
+  <p>Descubre nuestras ofertas exclusivas, revisa las opiniones de otros clientes y encuentra justo lo que estás buscando.</p>
+</div>
 
 <div class="row">
   {% for producto in seleccionados %}
