--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -44,7 +44,7 @@
             <a class="nav-link" href="{% url 'cart' %}">Carro</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'form' %}">Formulario</a>
+            <a class="nav-link" href="{% url 'form' %}">Registro</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'checkout' %}">Ir a pagar</a>
