--- a/store/templates/store/login.html
+++ b/store/templates/store/login.html
@@ -24,7 +24,7 @@
         </div>
       </form>
       <p class="mt-3 mb-0 text-center">
-        ¿No tienes una cuenta? <a href="#">Regístrate</a>
+        ¿No tienes una cuenta? <a href="{% url 'form' %}">Regístrate</a>
       </p>
     </div>
   </div>
