--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -1,12 +1,14 @@
 {% extends 'store/main.html' %}
+{% block title %}Store{% endblock %}
+
 {% load static %}
 
 {% block content %}
 <link rel="stylesheet" href="{% static 'css/main.css' %}">
 <div class="container text-center mt-2">
-  <h1>Bienvenido a E-TIENDA</h1>
-  <p>En E-TIENDA, ofrecemos una amplia selección de productos únicos y de alta calidad. Desde tecnología moderna hasta accesorios para tu día a día, estamos comprometidos a brindarte la mejor experiencia de compra.</p>
-  <p>Descubre nuestras ofertas exclusivas, revisa las opiniones de otros clientes y encuentra justo lo que estás buscando.</p>
+  <h1>Inicio E-TIENDA</h1>
+  <p></p>
+  <p></p>
 </div>
 
 <div class="row">
@@ -34,9 +36,9 @@
 
 <!-- HTML -->
 <div class="review-section mt-5">
-  <h2>Reseñas de Clientes</h2>
+  <h2>Ultimos pedidos clientes</h2>
   <div class="review">
-    <p>{{ reseñas.reseña }}</p>
+    <p>aqui va en el enlace</p>
   </div>
 </div>
 
