--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -2,8 +2,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Ecom</title>
-    <link rel="stylesheet" href="{% static 'css/main.css' %}">
+    <title>{% block title %}inicio{% endblock %}</title>
+    <!--icons-->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
+    />
+
+    <link rel="stylesheet" href="{% static 'css/main.css' %}" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -14,13 +20,11 @@
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1"
     />
-    
   </head>
   <body>
     <!-- Navbar de la tienda -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="{% url 'store' %}">E-TIENDA</a>
-      
       <button
         class="navbar-toggler"
         type="button"
@@ -32,45 +36,106 @@
       >
         <span class="navbar-toggler-icon"></span>
       </button>
-
+      
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
             <a class="nav-link" href="{% url 'store' %}"
-              >Tienda <span class="sr-only"></span
+              >Producto <span class="sr-only"></span
             ></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'cart' %}">Carro</a>
+            <a class="nav-link" href="{% url 'cart' %}">Ventas</a>
           </li>
-          <li class="nav-item">
+          <!--<li class="nav-item">
             <a class="nav-link" href="{% url 'form' %}">Registro</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'checkout' %}">Ir a pagar</a>
+            <a class="nav-link" href="{% url 'clientes' %}">Clientes</a>
+          </li>-->
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'checkout' %}">Dashboard</a>
           </li>
-
         </ul>
-
         <!-- login boton -->
         <div class="d-flex align-items-center ms-auto gap-3">
-          <a href="{%url 'login'%}" button type="button" class="btn btn-light">Login</a>
-          <a href="{% url 'cart' %}">
-            <img id="cart-icon" src="{% static 'images/cart.png' %}" />
-          </a>
-          <p id="cart-total">0</p>
+          <form class="d-flex">
+            <a
+              href="{%url 'login'%}"
+              button
+              type="button"
+              class="btn btn-secondary btn-sm"
+              >Login</a
+            >
+            <a href="{% url 'cart' %}">
+              <img id="cart-icon" src="{% static 'images/cart.png' %}" />
+            </a>
+            <!--<p id="cart-total">0</p>-->
+          </form>
         </div>
-
       </div>
     </nav>
 
+    <!--Menu opcional-->
+    <div class="col-md-6 col-lg-5 mx-auto py-3">
+      <ul
+        class="nav nav-pills nav-fill gap-2 p-1 small bg-primary rounded-5 shadow-sm"
+        id="pillNav2"
+        role="tablist"
+        style="
+          --bs-nav-link-color: var(--bs-white);
+          --bs-nav-pills-link-active-color: var(--bs-primary);
+          --bs-nav-pills-link-active-bg: var(--bs-white);
+        "
+      >
+        <li class="nav-item" role="presentation">
+          <button
+            class="nav-link active rounded-5"
+            id="home-tab2"
+            data-bs-toggle="tab"
+            type="button"
+            role="tab"
+            aria-selected="true"
+            onclick="window.location.href='{% url 'form' %}'"
+          >
+            Registro
+          </button>
+        </li>
+        <li class="nav-item" role="presentation">
+          <button
+            class="nav-link rounded-5"
+            id="profile-tab2"
+            data-bs-toggle="tab"
+            type="button"
+            role="tab"
+            aria-selected="false"
+            onclick="window.location.href='{% url 'clientes' %}'"
+          >
+            Clientes
+          </button>
+        </li>
+        <li class="nav-item" role="presentation">
+          <button
+            class="nav-link rounded-5"
+            id="contact-tab2"
+            data-bs-toggle="tab"
+            type="button"
+            role="tab"
+            aria-selected="false"
+          >
+            Productos
+          </button>
+        </li>
+      </ul>
+    </div>
+
     <main>
-      <div class= "container"> 
-        <br>
+      <div class="container">
+        <br />
         {% block content %}{% endblock %}
       </div>
     </main>
-    
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
@@ -80,8 +145,8 @@
   <footer class="bg-dark text-white text-center py-3">
     <p>© 2025 Technova - Todos los derechos reservados.</p>
     <p>
-        <a href="#" class="text-white me-3">Política de Privacidad</a>
-        <a href="#" class="text-white">Términos y Condiciones</a>
+      <a href="#" class="text-white me-3">Política de Privacidad</a>
+      <a href="#" class="text-white">Términos y Condiciones</a>
     </p>
-</footer>
+  </footer>
 </html>
