--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>{% block title %}inicio{% endblock %}</title>
+    <title>{% block title %}Inicio{% endblock %}</title>
     <!--icons-->
     <link
       rel="stylesheet"
