--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -1,47 +1,28 @@
 {% extends 'store/main.html' %}
+{% load static %} {# Es buena práctica tenerlo al principio #}
+
 {% block title %}Store{% endblock %}
 
-{% load static %}
-
+{# TODO EL CONTENIDO QUE QUIERAS MOSTRAR EN ESTA PÁGINA DEBE IR DENTRO DEL SIGUIENTE BLOQUE #}
 {% block content %}
-<link rel="stylesheet" href="{% static 'css/main.css' %}">
 <div class="container text-center mt-2">
-  <h1>Inicio E-TIENDA</h1>
-  <p></p>
-  <p></p>
+  <h1>Inicio E-TIENDA</h1>
+  <p></p>
+  <p></p>
 </div>
 
 <div class="row">
-  {% for producto in seleccionados %}
-    <div class="col-lg-4">
-      <img
-        class="thumbnail"
-        src="{% static producto.imagen %}"
-        alt="foto de un accesorio">
-      <div class="box-element product">
-        <h6><strong>Producto</strong></h6>
-        <hr>
-        <button class="btn btn-outline-secondary add-btn">añadir al carro</button>
-          <a href="https://www.solotodo.cl"target="_blank"class="btn btn-outline-success">
-              Ver
-          </a>
-
-        <h4 style="display: inline-block; float: right">
-          <strong>${{ producto.precio }}</strong>
-        </h4>
-      </div>
-    </div>
-  {% endfor %}
+ {% for prod in producto %} {# 'prod' será cada producto individual #}
+  <div class="col-lg-4">
+  <img class="thumbnail" src="{{ prod.imagen.url }}"> {# Muestra la imagen #}
+<div class="box-element product">
+ <h6><strong>{{ prod.nombre }}</strong></h6> {# Muestra el nombre #}
+ <hr>
+<button data-product="{{ prod.id }}" data-action="add" class="btn btn-outline-secondary add-btn update-cart">Add to Cart</button>
+ <a class="btn btn-outline-success" href="#">View</a>
+ <h4 style="display: inline-block; float: right">Bs. {{ prod.precio }}</h4> {# Muestra el precio #}
+ </div>
+ </div>
+{% endfor %}
 </div>
-
-<!-- HTML -->
-<div class="review-section mt-5">
-  <h2>Ultimos pedidos clientes</h2>
-  <div class="review">
-    <p>aqui va en el enlace</p>
-  </div>
-</div>
-
-
-
-{% endblock %}
+{% endblock content %} {# ¡No olvides cerrar el bloque! #}
